add PortMap type
