# webui/lib/api/schema/swagger.json
@@ -1901,10 +1901,9 @@
                     }
                 },
                 "Ports": {
-                    "description": "Ports specifies the port mappings required by the task",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.PortMapping"
+                        "$ref": "#/definitions/models.Port"
                     }
                 },
                 "Type": {
@@ -2023,7 +2022,7 @@
                 "NodeTypeCompute"
             ]
         },
-        "models.PortMapping": {
+        "models.Port": {
             "type": "object",
             "properties": {
                 "HostNetwork": {
